--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,16 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>挑战答题小助手</title>
-    <link rel="stylesheet"
-          href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet"
-          href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/sm.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/sm-extend.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/semantic.min.css}">
-    <script
-            src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
+    <script th:src="@{/js/jquery-1.8.3.js}"></script>
     <script th:src="@{/js/semantic.min.js}"></script>
 </head>
 <body>
@@ -33,7 +27,6 @@
 
     </div>
     </form>
-
     <div class="card" th:each="answer:${answers}">
         <div class="card-content">
             <div class="card-content-inner" th:text="${answer.getTitle()}"></div>
